--- a/poster.tex
+++ b/poster.tex
@@ -108,8 +108,8 @@ Uncovering information from histopathology image data is a difficult task and is
 
 \section*{Methods}
 
-Our strategy to identify the important features is to first segment the important elements in histopathology slides (such as cells, tumor and stromal tissue, necrotic regions, etc.), second to define physiologically interpretable features for each of these elements and third to build a prediction model in order to assess the importance of each of these features.
-We propose a method based on fully convolutional network  architectures for image segmentation that rely on standard convolutionnal networks.
+Our strategy to identify the important features is to first segment the important elements in histopathology slides (such as cells, tumor and stromal tissue, necrotic regions, etc.), second to define physiologically interpretable features for each of these elements and third to build a prediction model in order to assess the importance of each of these features. However, segmentation is the bottleneck of this work and his the main focus in the poster.
+We propose a segmentation method based on fully convolutional network (FCN)  architectures for image segmentation that rely on standard convolutionnal neural network (CNN).
 
 \color{DarkSlateGray} % Set the color back to DarkSlateGray for the rest of the content
 
