Thank you thomas

--- a/poster.tex
+++ b/poster.tex
@@ -191,9 +191,6 @@ convolutionnal neural network (CNN).
 \item {\em Variability in the objects}: another variability is biological variability. Many different cells and tissue types.
 \item {\em Projection artefacts}: a slice is actually a 3D slice, we can have overlapping cells / nuclei
   and other artefacts.
-\item {\em No explicit formalization of information}:
-  No clear descriptions of the objects we are trying to identify.
-  {\red What do you mean by this? }
 \end{enumerate}
 
 \section*{Manual annotation of histopathology slides}
@@ -272,10 +269,13 @@ Finally, training was performed on $21$ images and test on $5$ images across $6$
 
 \color{DarkSlateGray} % Set the color back to DarkSlateGray for the rest of the content
 
+\begin{small}
+
 \bibliographystyle{plain}
 %\bibliographystyle{abbrvnat}
 \bibliography{biblio.bib} % Use the example bibliography file sample.bib
 
+\end{small}
 
 \end{multicols}
 \end{document}
